tests/NormalTests/paczka1/small_fuzzy/17419347.err
Error in line 6: L4T A76 76,9
Error in line 2: A76 S808 54,8
Error in line 12: gHY72g8U S644 19,5
Error in line 7: L4T S808 8,8
